# viridis

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/00_test/: CMakeLists.txt
examples/00_test/src/: main.cpp
modules/: CMakeLists.txt
modules/viridis_core/: CMakeLists.txt
modules/viridis_core/include/viridis_core/util/: dynlib.hpp
modules/viridis_runtime/: CMakeLists.txt
modules/viridis_runtime/include/viridis_runtime/app/: application.hpp  application_builder.hpp  window_kind.hpp
modules/viridis_runtime/include/viridis_runtime/renderer/: renderer.hpp  renderer_bundle.hpp
modules/viridis_runtime/include/viridis_runtime/renderer/opengl/: opengl_renderer.hpp  opengl_renderer_bundle.hpp
modules/viridis_runtime/src/app/: application.cpp  application_builder.cpp
modules/viridis_runtime/src/renderer/opengl/: opengl_renderer.cpp  opengl_renderer_bundle.cpp
